--- a/style.less
+++ b/style.less
@@ -1,9 +1,18 @@
+/*
+Theme Name:   FFF Label
+Theme URI:    https://ffflabel.com/
+Description:  FFF Label Basic Wordpress Theme
+Author:       FFF Label
+Version:      1.0.0
+Text Domain:  ffflabel
+*/
+
 @charset "UTF-8";
 
 /*
 
-This is the critical styles.
-Loading in any case on any device
+This file contains all critical styles.
+Loading in any case on any device each time.
 
 */
 
