--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+/*
+Theme Name: FFFlabel Theme
+Theme URI:
+Author: Timon
+Author URI:
+Description: Theme for company White label
+Version: 0.0.1
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: fff
+Tags:
+
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
+
 @charset "UTF-8";
 /* Basics */
 /* Fonts */
