--- a/src/sass/settings/fonts.scss
+++ b/src/sass/settings/fonts.scss
@@ -1,6 +1,5 @@
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-@import url("../fonts/iconpack/style.css");
+//@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 $display: "Poppins", sans-serif;
 $icon: "dompak-theme";
